Fix alignment issue with date-time-local input field

--- a/styles.css
+++ b/styles.css
@@ -608,7 +608,7 @@ fieldset {
   font-weight: 700;
 }
 
-.workshop-host-form, form, .hoster-info, .what-hoster-wants {
+.workshop-host-form, form, .hoster-info, .what-hoster-wants div {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -617,11 +617,11 @@ fieldset {
 }
 
 .workshop-form-container {
-  background-image: url('images/group_building_terras.jpeg');
+  /* background-image: url('images/group_building_terras.jpeg'); */
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 0% 50%;
-  opacity: 85%;
+  opacity: 75%;
   padding: 4rem;
   border: .5px solid #1E2F23;
   width: 80%;
@@ -650,14 +650,17 @@ fieldset {
   border-radius: 7px;
   border: 2px solid black;
   margin: 2rem auto;
-  width: 23%;
+  width: 57%;
 }
 
 .workshop-host-form label, .workshop-host-form legend {
   margin: 1rem 1rem .25rem 1rem;
   line-height: 1.75rem;
-  font-size: 1.25rem;
-  font-weight: 600;
+  font-size: 1.29rem;
+  /* text-shadow: 1.1px 1.1px 3.9px black; */
+  letter-spacing: .09rem;
+  padding-bottom: .3rem;
+  font-weight: 200;
 }
 
 .what-hoster-wants fieldset, 
